--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 
         <footer class="text-center mt-16 border-t pt-8 border-gray-300 text-gray-600">
 
-            <p>&copy; 2025 加護病房人力優化方案報告. 版權所有。</p>
+            <p>&copy; 2025 奇美醫院加護醫學部人力優化方案報告. 版權所有。</p>
 
         </footer>
 
