--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
                     <li><span class="font-bold">功能：</span> eICU系統將使主治醫師能夠連續監測多個ICU病患的即時數據，提供遠端會診、診療建議和處置指導。</li>
 
-                    <li><span class="font-bold">會診與溝通協議：</span> 建立清晰的溝通協議至關重要，專科護理師在遇到疑慮或緊急情況時能立即聯繫eICU主治醫師。</li>
+                    <li><span class="font-bold">會診與溝通協議：</span> 建立清晰的溝通協議至關重要，專科護理師在遇到疑慮或緊急情況時能立即聯繫住院醫師及eICU主治醫師。</li>
 
                 </ul>
 
@@ -760,7 +760,7 @@
 
                 <p class="text-gray-700 mb-4 leading-loose">
 
-                    本次加護病房夜間人力配置的變革，從傳統以住院醫師為核心的夜間值班模式，轉向<span class="font-bold brand-primary">專科護理師主導、主治醫師eICU遠端顧問支援的混合式模式</span>，不僅是對當前醫療人力困境的積極回應，更是對未來重症照護模式的戰略性投資。
+                    本次加護病房夜間人力配置的變革，從傳統以住院醫師為核心的夜間值班模式，轉向<span class="font-bold brand-primary">專科護理師協同、主治醫師eICU遠端顧問支援的混合式模式</span>，不僅是對當前醫療人力困境的積極回應，更是對未來重症照護模式的戰略性投資。
 
                 </p>
 
